kubernetes/ingress/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend-app
spec:
  containers:
    - name: backend
      image: ealen/echo-server:latest
      ports:
        - containerPort: 80


---


apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
