kubernetes/ingress/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend-app
spec:
  containers:
  - name: front-end
    image: nginx:1.25
    ports:
    - containerPort: 80


---


apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
