kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-svc
              port: 
                number: 80

    - host: backend.example.com
      http:
        paths:
        - path: /api
          pathType: Exact
          backend:
            service:
              name: backend-svc
              port: 
                number: 80
